midterm backups/vm2(web)/iptables
# Generated by iptables-save v1.8.4 on Thu Nov 19 03:11:30 2020
*raw
:PREROUTING ACCEPT [41031:4145917]
:OUTPUT ACCEPT [49396:5078472]
COMMIT
# Completed on Thu Nov 19 03:11:30 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 03:11:30 2020
*mangle
:PREROUTING ACCEPT [41031:4145917]
:INPUT ACCEPT [41029:4145749]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [49396:5078472]
:POSTROUTING ACCEPT [49396:5078472]
COMMIT
# Completed on Thu Nov 19 03:11:30 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 03:11:30 2020
*nat
:PREROUTING ACCEPT [609:138984]
:INPUT ACCEPT [149:10093]
:POSTROUTING ACCEPT [9130:847052]
:OUTPUT ACCEPT [9130:847052]
COMMIT
# Completed on Thu Nov 19 03:11:30 2020
# Generated by iptables-save v1.8.4 on Thu Nov 19 03:11:30 2020
*filter
:INPUT ACCEPT [1147:96207]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [49396:5078472]
:LOGGING - [0:0]
-A INPUT -s 192.168.24.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p icmp -j ACCEPT
-A INPUT -s 172.16.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.24.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j LOGGING
-A INPUT -j LOGGING
-A LOGGING -p tcp -m tcp --dport 22 -j LOG
-A LOGGING -j LOG
-A LOGGING -p tcp -m tcp --dport 22 -j DROP
-A LOGGING -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 19 03:11:30 2020
